# tweetantistorm

./: .gitignore  README.md  pyproject.toml  sample.css
tests/: test_tweetantistorm.py
tweetantistorm/: fuck_twitter_api.py  main.py
